--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "html2pdf.js": "^0.10.3",
     "lucide-react": "^0.536.0",
     "radix-ui": "^1.4.2",
     "react": "^19.1.0",
@@ -35,6 +36,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
+    "@types/html2pdf.js": "^0.10.0",
     "@types/node": "^24.2.0",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
