--- a/backend/package.json
+++ b/backend/package.json
@@ -15,13 +15,16 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
-    "mssql": "^11.0.1"
+    "mssql": "^11.0.1",
+    "pdfkit": "^0.17.1",
+    "pdfkit-table": "^0.1.99"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/mssql": "^9.1.7",
     "@types/node": "^24.2.1",
+    "@types/pdfkit": "^0.17.2",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2"
